--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,4 @@ opencv-python>=4.8.0
 gunicorn>=21.2.0
 textblob==0.17.1
 nltk==3.8.1  # TextBlob requires NLTK data
+opencv-python-headless==4.9.0.80  # Headless version for server environments
