--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,4 @@ gunicorn>=21.2.0
 textblob==0.17.1
 nltk==3.8.1  # TextBlob requires NLTK data
 opencv-python-headless==4.9.0.80  # Headless version for server environments
+opencv-python-headless==4.9.0.80  # Server-friendly version
